--- a/project_hw_barbershop/hw_38/pyproject.toml
+++ b/project_hw_barbershop/hw_38/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "django (>=5.2.5,<6.0.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
     "pillow (>=11.3.0,<12.0.0)",
-    "django-extensions (>=4.1,<5.0)"
+    "django-extensions (>=4.1,<5.0)",
+    "django-debug-toolbar (>=6.0.0,<7.0.0)"
 ]
 
 
