--- a/project_hw_barbershop/hw_38/pyproject.toml
+++ b/project_hw_barbershop/hw_38/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "python-dotenv (>=1.1.1,<2.0.0)",
     "pillow (>=11.3.0,<12.0.0)",
     "django-extensions (>=4.1,<5.0)",
-    "django-debug-toolbar (>=6.0.0,<7.0.0)"
+    "django-debug-toolbar (>=6.0.0,<7.0.0)",
+    "django-jazzmin (>=3.0.1,<4.0.0)"
 ]
 
 
